# android-openCL-sandbox

./: .gitignore  README.en.md  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/demo_ndk_opencv/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/administrator/openclsandbox/: ExampleInstrumentedTest.java
app/src/androidTest/java/zt/mezon/graphomany/openclsandbox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLbackend.cpp  CLbackend.h  OpenCLWrapper.cpp  OpenCLWrapper.h  android_log.h  libopencl.cpp  native-lib.cpp  opencl_cl_files.h
app/src/main/cpp/include/opencl/opencl22/CL/: cl.h
app/src/main/cpp/totst/: exinos.cl  oclMatrixMul.cpp  oclTranspose.cpp  transpose_gold.cpp  tst_kernels.cl
app/src/main/java/com/example/administrator/demo_ndk_opencv/: MainActivity.java
app/src/main/java/com/example/administrator/openclsandbox/: MainActivity.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/: App.java  MainActivity.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/datasource/: ResourceProvider.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/ui/base/: BaseFragment.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/ui/camera/: CameraHomeFragment.java  CameraHomeViewModel.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/ui/dashboard/: ClDashboardFragment.java  ClDashboardViewModel.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/ui/mactivity/: IMainActivityPresenter.java  IMainMVPView.java  IMainViewNDKNavigator.java  MainActivity.java  MainActivityPresenterImpl.java  MainViewNDKHelper.java  MainViewPresenter.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/ui/notifications/: NotificationsFragment.java  NotificationsViewModel.java
app/src/main/java/zt/mezon/graphomany/openclsandbox/ui/testcalc/: TestCalcFragment.java  TestCalcViewModel.java
app/src/main/res/layout/: activity_main.xml  fragment_clcam.xml  fragment_dashboard.xml  fragment_othercalc.xml  ocvsobelrgb.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/demo_ndk_opencv/: ExampleUnitTest.java
app/src/test/java/com/example/administrator/openclsandbox/: ExampleUnitTest.java
app/src/test/java/zt/mezon/graphomany/openclsandbox/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/native/jni/include/opencv2/core/opencl/runtime/autogenerated/: opencl_core.hpp
